New Font Style Uploaded

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="d-flex flex-column justify-content-center align-items-center min-vh-100">
         <div class="bg-card text-light p-3">
-            <p class="h2 text-center">Weather</p>
+            <p class="head text-center">Weather</p>
             <div class="px-3 d-flex justify-content-between search">
                 <input type="text" class="form-control city-search" placeholder="City Name"/>
                 <button class="btn btn-success mx-2"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></button>
